// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateAppendOnlyDDL (PostgreSQL) > escapes identifier with embedded double quotes 1`] = `
[
  "CREATE OR REPLACE FUNCTION "public"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "my""table";",
  "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "my""table"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "my""table";",
  "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "my""table"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "my""table";",
  "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "my""table"
  EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
]
`;

exports[`generateAppendOnlyDDL (PostgreSQL) > generates guard function and triggers with namespace 1`] = `
[
  "CREATE OR REPLACE FUNCTION "reporting"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "reporting"."audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "reporting"."audit_log"
  FOR EACH ROW EXECUTE FUNCTION "reporting"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "reporting"."audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "reporting"."audit_log"
  FOR EACH ROW EXECUTE FUNCTION "reporting"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "reporting"."audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "reporting"."audit_log"
  EXECUTE FUNCTION "reporting"."proteus_append_only_guard"();",
]
`;

exports[`generateAppendOnlyDDL (PostgreSQL) > generates guard function and triggers without namespace 1`] = `
[
  "CREATE OR REPLACE FUNCTION "public"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "audit_log"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "audit_log"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "audit_log"
  EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
]
`;

exports[`generateAppendOnlyDDL (PostgreSQL) escapes identifier with embedded double quotes 1`] = `
[
  "CREATE OR REPLACE FUNCTION "public"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "my""table";",
  "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "my""table"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "my""table";",
  "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "my""table"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "my""table";",
  "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "my""table"
  EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
]
`;

exports[`generateAppendOnlyDDL (PostgreSQL) generates guard function and triggers with namespace 1`] = `
[
  "CREATE OR REPLACE FUNCTION "reporting"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "reporting"."audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "reporting"."audit_log"
  FOR EACH ROW EXECUTE FUNCTION "reporting"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "reporting"."audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "reporting"."audit_log"
  FOR EACH ROW EXECUTE FUNCTION "reporting"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "reporting"."audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "reporting"."audit_log"
  EXECUTE FUNCTION "reporting"."proteus_append_only_guard"();",
]
`;

exports[`generateAppendOnlyDDL (PostgreSQL) generates guard function and triggers without namespace 1`] = `
[
  "CREATE OR REPLACE FUNCTION "public"."proteus_append_only_guard"()
RETURNS TRIGGER AS $$
BEGIN
  RAISE EXCEPTION 'append-only entity: % operations are forbidden on %.%',
    TG_OP, TG_TABLE_SCHEMA, TG_TABLE_NAME
    USING ERRCODE = 'restrict_violation';
  RETURN NULL;
END;
$$ LANGUAGE plpgsql IMMUTABLE;",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_update" ON "audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_update"
  BEFORE UPDATE ON "audit_log"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_delete" ON "audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_delete"
  BEFORE DELETE ON "audit_log"
  FOR EACH ROW EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
  "DROP TRIGGER IF EXISTS "proteus_append_only_no_truncate" ON "audit_log";",
  "CREATE TRIGGER "proteus_append_only_no_truncate"
  BEFORE TRUNCATE ON "audit_log"
  EXECUTE FUNCTION "public"."proteus_append_only_guard"();",
]
`;
